Fix page navigation being incorrectly fired on Mac OSX.

With wheel gestures being enabled the wheel event goes
unhandled most of the time. There was specific code for Mac
to handle the not handled mouse wheel event that would
fire. Instead base it off gestures when we are using this
setting.

Update unit test to ensure this fires for gestures
correctly.

BUG=599153
TBR=thestig@chromium.org

Review URL: https://codereview.chromium.org/1848063002

Cr-Commit-Position: refs/heads/master@{#384770}

Former-commit-id: b2c5c9d8120abd6dd8605ab430ad557857f75bda